--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -7,14 +7,20 @@
   "not" : "Not",
   "save" : "Save",
   "add" : "Add",
+  "(select)": "(Select)",
+  "verified" : "Verified",
+  "remove" : "Remove",
 
   "actions" : "Actions",
   "name" : "Name",
   "email": "Email",
   "active" : "Active",
   "admin" : "Admin",
+  "question" : "Question",
+  "answers" : "Answers",
+  "correct" : "Correct",
   "created_by": "Created By",
-  "edited_by": "Editado Por",
+  "edited_by": "Edited Por",
 
   "hint_see": "See",
   "hint_edit": "Edit",
@@ -23,6 +29,8 @@
   "hint_inactivate" : "Inactivate User",
   "hint_adm_on" : "Become Administrator",
   "hint_adm_off": "Remove Administrator",
+
+  "course": "Course",
 
   "header_menu_courses": "Courses",
   "header_menu_questions": "Questions",
@@ -34,6 +42,27 @@
   "alert-verify-email-2" : "are not verified, for you security, active the email registered",
 
   "courses_view_new_courses": "New Class",
+  "questions_view_new_question": "New Question",
+  "questions_form_new_answer": "New Answer",
+
+  "questions_basic_information" : "Basic Information",
+
+  "users_basic_data" : "Basic Information",
+  "users_emails" : "Emails",
+
+  "user_activate_success" : "User activated successfully",
+  "user_activate_fail" : "Failed to activate user",
+
+  "user_disable_success" : "User disabled successfully",
+  "user_disable_fail" : "Failed to disable user",
+
+  "user_course_already_pushed" : "The chosen course has already been assigned to the user",
+
+  "admin_enable_success" : "Successfully granted administrator permission",
+  "admin_enable_fail" : "Failed to grant administrator permission to user",
+
+  "admin_disable_success" : "Successfully revoked admin permission",
+  "admin_disable_fail" : "Failed to revoke administrator permission for user",
 
   "register_insert_success" : "Record inserted with success",
   "register_insert_fail" : "Failed to insert record",
