--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -36,8 +36,10 @@
   "header_menu_questions": "Questions",
   "header_menu_users": "Users",
 
-  "alert-account-inactive-msg" : "Your account are inactive. This means that you can not create questions until some admin activate your account.",
+  "index_have_not_login?1" : "No account yet?",
+  "index_have_not_login?2" : "Click the 'Sign In / Register' button in the upper right corner and wait for an administrator's approval",
 
+  "alert-account-inactive-msg" : "Your account are inactive. This means that you can not create questions until some admin activate your account.",
   "alert-verify-email-1" : "The email",
   "alert-verify-email-2" : "are not verified, for you security, active the email registered",
 
